[package]
name = "prettycond"
version = "0.1.0"
edition = "2021"
description = "Print Kubernetes CR conditions from piped JSON as a readable table"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
